# tonixxx

./: .gitignore  .gitmodules  .travis.yml  DEVELOPMENT.md  LICENSE.md  Makefile  README.md  artifactshost.go  atomicdeque.go  distillery.go  go.mod  go.sum  guesttype.go  guesttypes.go  magefile.go  mkdir.go  publish-docs.sh  recipe.go  step.go  tonixxx.go  tonixxx_test.go
examples/bronze/: .gitignore  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  tinyrick.rs  tonixxx.yaml
examples/bronze/buildbot-src/bronze-buildbot-centos/: Makefile  Vagrantfile
examples/bronze/buildbot-src/bronze-buildbot-centos-amd64/: Makefile  Vagrantfile  bootstrap
examples/bronze/buildbot-src/bronze-buildbot-centos-i386/: Makefile  Vagrantfile
examples/bronze/buildbot-src/bronze-buildbot-debian-amd64/: Makefile  Vagrantfile
examples/bronze/buildbot-src/bronze-buildbot-debian-i386/: Vagrantfile
examples/bronze/buildbot-src/bronze-buildbot-freebsd/: Makefile  Vagrantfile
examples/bronze/buildbot-src/bronze-buildbot-hardenedbsd/: Makefile  Vagrantfile  bootstrap.sh
examples/bronze/buildbot-src/bronze-buildbot-macos/: Makefile  Vagrantfile
examples/bronze/buildbot-src/bronze-buildbot-netbsd-amd64/: Makefile  Vagrantfile
examples/bronze/buildbot-src/bronze-buildbot-windows-amd64/: Vagrantfile
examples/bronze/buildbot-src/bronze-buildbot-windows-i386/: Makefile  Vagrantfile  bootstrap.ps1
examples/bronze/src/lib/: bronze.rs
examples/fewer/: .gitignore  CMakeLists.txt  CPPLINT.cfg  Doxyfile  README.md  clean-cmake.sh  cloudabi-test-repl.yml  cloudabi-unittest.yml  cloudabi.yml  dir_000003_000000.html  dir_000004_000000.html  dir_012e27537dbebc25ca87c58d8a6e4d21.html  dir_012e27537dbebc25ca87c58d8a6e4d21_dep.map  dir_012e27537dbebc25ca87c58d8a6e4d21_dep.md5  dir_49d13ac0bb3286352c901ffeec09b6a6.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8a0776572ba2252f65a895457421e228.html  dir_8a0776572ba2252f65a895457421e228_dep.map  dir_8a0776572ba2252f65a895457421e228_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  fewer-script-hanging.txt  fewer-script.txt  fewer_8c.html  fewer_8c__incl.map  fewer_8c__incl.md5  fewer_8h.html  fewer_8h__dep__incl.map  fewer_8h__dep__incl.md5  fewer_8h_source.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8c.html  main_8c__incl.map  main_8c__incl.md5  recur-splint.sh  recur-vera++.sh  tonixxx.yaml
examples/fewer/buildbot-src/fewer-buildbot-centos/: Makefile  Vagrantfile  bootstrap  bootstrap.sh
examples/fewer/buildbot-src/fewer-buildbot-debian-alpha/: Makefile  Vagrantfile
examples/fewer/buildbot-src/fewer-buildbot-debian-amd64/: Makefile  Vagrantfile  bootstrap
examples/fewer/buildbot-src/fewer-buildbot-debian-arm64/: Makefile  Vagrantfile  bootstrap
examples/fewer/buildbot-src/fewer-buildbot-debian-armel/: Makefile  Vagrantfile
examples/fewer/buildbot-src/fewer-buildbot-debian-armhf/: Makefile  Vagrantfile
examples/fewer/buildbot-src/fewer-buildbot-debian-hppa/: Makefile  Vagrantfile
examples/fewer/buildbot-src/fewer-buildbot-debian-i386/: Vagrantfile  bootstrap.sh
examples/fewer/buildbot-src/fewer-buildbot-debian-mips64el/: Makefile  Vagrantfile
examples/fewer/buildbot-src/fewer-buildbot-debian-mipsel/: Makefile  Vagrantfile
examples/fewer/buildbot-src/fewer-buildbot-debian-powerpc/: Makefile  Vagrantfile
examples/fewer/buildbot-src/fewer-buildbot-debian-ppc64/: Makefile  Vagrantfile
examples/fewer/buildbot-src/fewer-buildbot-debian-ppc64el/: Makefile  Vagrantfile  bootstrap.sh
examples/fewer/buildbot-src/fewer-buildbot-debian-riscv64/: Makefile  Vagrantfile
examples/fewer/buildbot-src/fewer-buildbot-debian-sparc64/: Makefile  Vagrantfile  bootstrap.sh
examples/fewer/buildbot-src/fewer-buildbot-debian-x32/: Makefile  Vagrantfile  bootstrap.sh
examples/fewer/buildbot-src/fewer-buildbot-dragonfly/: Makefile  Vagrantfile  bootstrap.sh
examples/fewer/buildbot-src/fewer-buildbot-freebsd/: Makefile  Vagrantfile  bootstrap  bootstrap.sh
examples/fewer/buildbot-src/fewer-buildbot-gentoo-amd64/: Makefile  Vagrantfile  bootstrap.sh
examples/fewer/buildbot-src/fewer-buildbot-haiku-amd64/: Makefile  Vagrantfile
examples/fewer/include/fewer/: fewer.h
examples/fewer/lib/: fewer.c  fewer.h  main.c  main.h
examples/fewer/search/: all_0.js  all_1.js  all_2.js  all_3.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
examples/fewer/src/: fewer.c
examples/mo/: .gitignore  LICENSE.md  Makefile  Mo.hs  README.md  Shakefile.hs  mo.cabal  tonixxx.yaml
examples/mo/src/: CLI.hs  Mo.hs
examples/mo/testsuite/: TestRunner.hs
examples/palindrome/: .gitignore  CMakeLists.txt  CPPLINT.cfg  Doxyfile  README.md  dir_000003_000000.html  dir_000004_000000.html  dir_3616e7af486777d783199596412beee4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8a0776572ba2252f65a895457421e228.html  dir_8a0776572ba2252f65a895457421e228_dep.map  dir_8a0776572ba2252f65a895457421e228_dep.md5  dir_ac6898c1399f0b019805b76cd0d760ad.html  dir_ac6898c1399f0b019805b76cd0d760ad_dep.map  dir_ac6898c1399f0b019805b76cd0d760ad_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  namespacemembers.html  namespacemembers_func.html  namespacepal.html  namespaces.html  palindrome_8cpp.html  palindrome_8cpp__incl.map  palindrome_8cpp__incl.md5  palindrome_8hpp.html  palindrome_8hpp__dep__incl.map  palindrome_8hpp__dep__incl.md5  palindrome_8hpp__incl.map  palindrome_8hpp__incl.md5  palindrome_8hpp_source.html  recur-cpplint.sh  requirements-dev.txt  tonixxx.yaml
examples/palindrome/lib/: main.cpp  main.h  main.hh  palindrome.cpp  palindrome.h
examples/palindrome/search/: all_1.js  files_1.js  functions_1.js  namespaces_0.js  searchdata.js
examples/palindrome/src/: palindrome.cpp
examples/potato/: .gitignore  CMakeLists.txt  README.md  dale.d  dub.sdl  factoids.txt  tests.d  tonixxx.yaml
examples/potato/lib/: main.d
examples/potato/src/: main.d  pt.d
(+247 files in other folders)
