name:           mo
version:        0.0.1
category:       Math
synopsis:       Wau codec
description:    A base unary encoder/decoder
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/tonixxx.git

executable mo
  build-depends:
    base >= 4.3.1.0 && < 5,
    directory >= 1.3.2.1 && < 2,
    QuickCheck >= 2.11.3 && < 3

  main-is: Mo.hs
  hs-source-dirs: src
  ghc-options: -O2 -Wall -fwarn-tabs
